--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,12 +75,15 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+  - family: Oswald
+    fonts:
+      - asset: fonts/Oswald-Regular.ttf
+      - asset: fonts/Oswald-Bold.ttf
+        weight: 700
+      - asset: fonts/Oswald-ExtraLight.ttf
+      - asset: fonts/Oswald-SemiBold.ttf
+        style: italic
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
