--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.6
+  font_awesome_flutter: ^9.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -61,8 +62,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - images/fox.png
-  #   - images/a_dot_ham.jpeg
+     - images/fox.png
+#     - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
